[package]
name = "forge_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5.0"
crossterm = "0.29.0"
futures = "0.3.31"
memchr = "2.7.6"
once_cell = "1.21.3"
ordered-float = "5.1.0"
ratatui = "0.29.0"
regex = "1.11"
rustls = { version = "0.23", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.7"

# Auth API dependencies
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Web server dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
