[package]
name = "forge_sdk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto and encoding
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
crc32fast = "1.5"

# Utilities
url = "2"
regex = "1.12"
memchr = "2"
once_cell = "1"
ordered-float = "4"
thiserror = "2"
dotenvy = "0.15"

# System info
sysinfo = "0.32"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS (using ring backend to avoid aws-lc-sys which requires cmake/NASM)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[[example]]
name = "book_test"
path = "examples/book_test.rs"

[[example]]
name = "chart_server"
path = "examples/chart_server.rs"

[[example]]
name = "chart_viewer"
path = "examples/chart_viewer.rs"

[[example]]
name = "connection_check"
path = "examples/connection_check.rs"

[[example]]
name = "full_app"
path = "examples/full_app.rs"

[[example]]
name = "governor_demo"
path = "examples/governor_demo.rs"

[[example]]
name = "ticker_parser"
path = "examples/ticker_parser.rs"

[[example]]
name = "tui_monitor"
path = "examples/tui_monitor.rs"

[[example]]
name = "auth_test"
path = "examples/auth_test.rs"
